# daily_projects_collab

./: .gitignore  Cargo.toml
crates/jmespath_fun/: Cargo.toml
crates/jmespath_fun/src/: main.rs
crates/monad_stuff/: Cargo.toml
crates/monad_stuff/src/: main.rs
crates/my_first_crate/: Cargo.toml
crates/shuffles/: Cargo.toml
crates/shuffles/src/: main.rs
crates/webpage_copy/: Cargo.toml
crates/webpage_copy/src/: main.rs
crates/yaml_parser/: Cargo.toml
crates/yaml_parser/src/: main.rs
