[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.lints.clippy]
#allow_attributes_without_reason = "deny"
#almost_complete_range = "warn"
#almost_swapped = "deny"
#cognitive_complexity = "warn"
#dbg_macro = "warn"
#debug_assert_with_mut_call = "warn"
#doc_link_with_quotes = "warn"
#doc_markdown = "warn"
#empty_line_after_outer_attr = "warn"
#empty_structs_with_brackets = "warn"
#float_cmp = "warn"
#float_cmp_const = "warn"
#float_equality_without_abs = "warn"
#keyword_idents = "warn"
#missing_const_for_fn = "warn"
#missing_copy_implementations = "warn"
#missing_debug_implementations = "warn"
#missing_docs_in_private_items = "warn"
#missing_errors_doc = "warn"
#missing_panics_doc = "warn"
#mod_module_files = "warn"
#non_ascii_idents = "warn"
#noop_method_call = "warn"
#option_if_let_else = "warn"
#print_stderr = "warn"
#print_stdout = "warn"
#semicolon_if_nothing_returned = "warn"
#unseparated_literal_suffix = "warn"
#shadow_unrelated = "warn"
#similar_names = "warn"
#suspicious_operation_groupings = "warn"
#unused_crate_dependencies = "warn"
#unused_extern_crates = "warn"
#unused_import_braces = "warn"
#unused_self = "warn"
#use_debug = "warn"
#used_underscore_binding = "warn"
#useless_let_if_seq = "warn"
#wildcard_dependencies = "warn"
#wildcard_imports = "warn"
#unwrap_used = "warn"
#expect_used = "warn"
#needless_bool = "deny"
